delete pages, rename, add google analytics

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -23,8 +23,8 @@
 	<meta name="theme-color" content="#fff">
 
 	<!-- Open Graph -->
-	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="Dabeisein ist alles">
+	<meta property="og:type" content="blog">
+	<meta property="og:title" content="Aus dem Bauch heraus">
 	<meta property="og:url" content="/">
 	<meta property="og:image" content="/img/og-image.jpg">
 
