Add google site verification

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -11,7 +11,8 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <base href="{{ if getenv "CONTEXT" }}{{ cond (eq "production" (getenv "CONTEXT")) (getenv "URL") (getenv "DEPLOY_PRIME_URL") }}{{ else }}{{ $.Site.BaseURL }}{{ end }}">
-
+  <meta name="google-site-verification" content="Ov2jNcwe6ekOPD8AtVmyhQN3xk1m6bA7EmHzE8M-cjM" />
+  
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
 	<!-- Favicons -->
