--- a/site/layouts/partials/pagination.html
+++ b/site/layouts/partials/pagination.html
@@ -2,14 +2,14 @@
  
 <nav class="cf pa3">
     {{ if .Paginator.HasNext }}
-    <a class="fl dib link dim black f6 f5-ns b pa2" title="Next Page" href="{{ .Paginator.Next.URL }}">
-        &larr; Previous
+    <a class="fl dib link dim black f6 f5-ns b pa2"  href="{{ .Paginator.Next.URL }}">
+        &larr; Ältere Beiträge
     </a>
     {{ end }}
     <div class="pagination">
         {{ if .Paginator.HasPrev }}
-        <a class="fl dib link dim black f6 f5-ns b pa2" title="Previous Page" href="{{ .Paginator.Prev.URL }}">
-            Next &rarr;
+        <a class="fl dib link dim black f6 f5-ns b pa2" href="{{ .Paginator.Prev.URL }}">
+            Neuere Beiträge &rarr;
         </a>
         {{ end }}
     </div>
